# blog

./: .gitignore  .gitmodules  blah  blog_requirements.txt  fabfile.py  pelicanconf.py  publish.sh  publishconf.py  pyproject.toml  requirements.txt  tasks.py
content/: .RData  .Rhistory  2015-09-01-A-Gentle-Introduction-to-the-Standard-Error-of-the-Mean.md  2015-09-08-a-gentle-introduction-to-bootstrapping.md  2015-09-15-representative-sampling.md  2015-09-22-Interactive-Model-Decision-Trees-in-Stata.md  2015-09-30-two-group-hypothesis-testing-t-tests.md  2015-10-07-two-group-hypothesis-testing-permutation-tests.md  2015-10-14-using-k-fold-cross-validation-to-estimate-out-of-sample-accuracy.md  2015-10-21-avoiding-the-crowds-in-melbourne-cbd-using-data.md  2015-10-28-interpreting-linear-regression-coefficients.md  2015-11-04-linear-regression-tools-in-r.md  2015-11-11-understanding-object-orientated-programming-in-python.md  2015-11-18-reddit-api-part-1.md  2015-11-25-reddit-api-part-2.md  2015-12-02-reddit-api-part-3.md  2015-12-09-reddit-api-part-4.md  2015-12-15-ggplot-graphs-part-1-line-graphs.md  2015-12-16-installing-rjava-in-mac.md  2015-12-22-ggplot-graphs-part-2-area-graphs.md  2015-12-23-christmas-movies-ratings.md  2015-12-30-planning melbourne new years using data.md  2016-01-06-web-scraping-in-python.md  2016-01-07-ggplot-graphs-part-3-bar-graphs.md  2016-01-16-running-rodeo-in-a-virtualenv.md  2016-01-19-ggplot-graphs-part-4-stacked-bar-graphs.md  2016-01-31-picking-your-winning-gwent-deck-using-r.md  2016-02-04-ggplot-graphs-part-4-scatterplots.md  (+38 more)
(+150 files in other folders)
